# sipua

./: Cargo.toml  README.md
.github/workflows/: rust.yml
crates/parsip/: LICENSE  README.md
src/: lib.rs
src/transport/sip/: client.rs  mod.rs  server.rs
tests/: test.rs
tests/transport/: mod.rs
tests/transport/sip/: mod.rs
