[package]
name = "sipua"
version = "0.0.2"
authors = ["Anatolii Kurotych <akurotych@gmail.com>"]
license = "MIT"
description = "SIP User-Agent library"
edition = "2018"

[dependencies]
parsip = { version = "0.1.0", path = "crates/parsip" }
tokio = { version = "0.2.4", features = ["full"] }

[workspace]
members = [
    "crates/parsip"
]
